--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
         <footer>
             <p>Données: <a href="https://data.assemblee-nationale.fr" target="_blank">Assemblée Nationale Open Data</a> | 
             Modèle: <a href="https://huggingface.co/mistralai/Ministral-3-3B-Instruct-2512-ONNX" target="_blank">Mistral 3B ONNX</a> | 
-            <a href="https://github.com/yourusername/deputegpt" target="_blank">GitHub</a></p>
+            <a href="https://github.com/wald52/deputegpt" target="_blank">GitHub</a></p>
         </footer>
     </div>
 
