--- a/index.html
+++ b/index.html
@@ -353,7 +353,26 @@
       <div class="panel">
         <h2>Conversation avec l'IA</h2>
 
-        <div id="loading-status">Chargement du modèle WebGPU...</div>
+       <div id="loading-status" class="loading-status">
+  <button id="load-model-btn" class="send-btn" type="button">
+    Charger le modèle WebGPU
+  </button>
+
+  <div id="model-progress-wrap" style="display:none; margin-top:12px;">
+    <div style="display:flex; justify-content:space-between; gap:12px; font-weight:600;">
+      <span id="model-progress-label">Préparation…</span>
+      <span id="model-progress-pct">0%</span>
+    </div>
+
+    <div style="height:14px; background:#e9ecef; border-radius:999px; overflow:hidden; margin-top:8px;">
+      <div id="model-progress-bar" style="height:100%; width:0%; background:#667eea;"></div>
+    </div>
+
+    <div style="margin-top:8px; color:#555;">
+      Temps restant estimé : <span id="model-progress-eta">--:--</span>
+    </div>
+  </div>
+</div>
 
         <div class="depute-card" id="selected-depute">
           <img class="depute-photo" id="depute-img" src="" alt="Photo" />
@@ -466,6 +485,104 @@
 
       addMessage('system', `Vous discutez maintenant avec les données de vote de ${depute.nom}.`);
     }
+
+function fmtTime(seconds) {
+  if (!Number.isFinite(seconds) || seconds < 0) return '--:--';
+  const s = Math.round(seconds);
+  const m = Math.floor(s / 60);
+  const r = s % 60;
+  return `${String(m).padStart(2,'0')}:${String(r).padStart(2,'0')}`;
+}
+
+function setupModelLoadUI() {
+  const btn = document.getElementById('load-model-btn');
+  btn.addEventListener('click', async () => {
+    btn.disabled = true;
+    await initAI(); // charge seulement maintenant
+  });
+}
+
+async function initAI() {
+  const status = document.getElementById('loading-status');
+  const btn = document.getElementById('load-model-btn');
+
+  const wrap = document.getElementById('model-progress-wrap');
+  const label = document.getElementById('model-progress-label');
+  const pctEl = document.getElementById('model-progress-pct');
+  const bar = document.getElementById('model-progress-bar');
+  const etaEl = document.getElementById('model-progress-eta');
+
+  // UI: on passe du bouton à la barre
+  btn.style.display = 'none';
+  wrap.style.display = 'block';
+  label.textContent = 'Téléchargement du modèle… (peut prendre plusieurs minutes)';
+  pctEl.textContent = '0%';
+  bar.style.width = '0%';
+  etaEl.textContent = '--:--';
+
+  const t0 = performance.now();
+
+  // Petit helper: calcule % + ETA à partir du temps écoulé
+  function updateProgress(pct, extraText = '') {
+    const clamped = Math.max(0, Math.min(100, pct));
+    pctEl.textContent = `${clamped.toFixed(0)}%`;
+    bar.style.width = `${clamped}%`;
+
+    if (extraText) label.textContent = extraText;
+
+    const elapsed = (performance.now() - t0) / 1000;
+    if (clamped > 1 && elapsed > 1) {
+      const speed = clamped / elapsed;             // % / sec
+      const remaining = (100 - clamped) / speed;   // sec
+      etaEl.textContent = fmtTime(remaining);
+    }
+  }
+
+  try {
+    // IMPORTANT: progress_callback est supporté par pipeline() [web:677][web:694]
+    generator = await pipeline(
+      'text-generation',
+      'onnx-community/Llama-3.2-1B-Instruct',
+      {
+        device: 'webgpu',
+        dtype: 'q4',
+        progress_callback: (info) => {
+          // Selon les versions, `info` peut varier.
+          // On tente plusieurs champs courants.
+          let pct = 0;
+
+          if (typeof info?.progress === 'number') {
+            // souvent 0..1
+            pct = info.progress <= 1 ? info.progress * 100 : info.progress;
+          } else if (typeof info?.loaded === 'number' && typeof info?.total === 'number' && info.total > 0) {
+            pct = (info.loaded / info.total) * 100;
+          }
+
+          const what =
+            info?.file ? `Téléchargement: ${info.file}` :
+            info?.name ? `Chargement: ${info.name}` :
+            'Chargement du modèle…';
+
+          // Beaucoup de messages n'ont pas de % (pct=0). On met à jour seulement si pct > 0.
+          if (pct > 0) updateProgress(pct, what);
+          else label.textContent = what;
+        },
+      }
+    );
+
+    updateProgress(100, 'IA prête !');
+    status.className = 'loading-status ready';
+
+    document.getElementById('send-btn').disabled = false;
+    document.getElementById('user-input').disabled = false;
+
+  } catch (error) {
+    status.className = 'loading-status error';
+    label.textContent = `Erreur WebGPU: ${error.message}`;
+    etaEl.textContent = '--:--';
+    console.error('Erreur WebGPU', error);
+  }
+}
 
     async function initAI(){
       const status = document.getElementById('loading-status');
