--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
       document.getElementById('stat-votes').textContent = "0";
 
       // On construit l'URL et on l'affiche dans la console
-      const urlVotes = `data/votes/${depute.id}.json`;
+      const urlVotes = `public/data/votes/${depute.id}.json`;
       console.log("Tentative de chargement URL :", urlVotes);
 
       try {
