--- a/index.html
+++ b/index.html
@@ -675,9 +675,9 @@ function setupModelLoadUI() {
         });
 
         // 2. Charger le modèle de discussion (Llama)
-        updateProgress(20, 'Initialisation du cerveau (Llama-3.2)...');
+        updateProgress(20, 'Initialisation du cerveau...');
         
-        generator = await pipeline('text-generation', 'onnx-community/Llama-3.2-3B-Instruct', {
+        generator = await pipeline('text-generation', 'onnx-community/Qwen2.5-1.5B-Instruct', {
           device: 'webgpu',
           dtype: 'q4',
           progress_callback: (info) => {
