--- a/index.html
+++ b/index.html
@@ -398,6 +398,9 @@
                 <option value="1B" selected>Llama 3.2 1B (Rapide)</option>
                 <option value="3B">Llama 3.2 3B (Haute Précision)</option>
             </select>
+            <p style="font-size: 0.75em; color: #888; margin-top: 8px; margin-bottom: 0; font-style: italic; line-height: 1.2;">
+                ℹ️ Pour changer de modèle après chargement, vous devrez rafraîchir la page.
+            </p>
         </div>
 
       <div id="loading-status" class="loading-status">
