--- a/index.html
+++ b/index.html
@@ -427,8 +427,8 @@
               🚀 Charger le modèle IA
           </button>
 
-        <div id="model-progress-wrap" style="display:none; margin-top:12px;">
-          <div style="display:flex; justify-content:space-between; gap:12px; font-weight:600;">
+        <div id="model-progress-wrap" style="display:none; margin-top:8px;">
+          <div style="display:flex; justify-content:space-between; gap:12px; font-weight:600; font-size: 0.85em; margin-bottom: 2px;">
             <span id="model-progress-label">Préparation…</span>
             <span id="model-progress-pct">0%</span>
           </div>
